LoginPage class update

--- a/deepmarketplace/test-output/old/Default suite/classes.html
+++ b/deepmarketplace/test-output/old/Default suite/classes.html
@@ -11,6 +11,10 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>logintodeepmarketplace</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>homepageTitleTest</td>
 <td>&nbsp;</td></tr>
 <tr>
