login & signup test cases update

--- a/deepmarketplace/test-output/old/Default suite/classes.html
+++ b/deepmarketplace/test-output/old/Default suite/classes.html
@@ -4,14 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>qa.deepmarketplace.test.LoginPageTest</td>
+<td>qa.deepmarketplace.test.HomePageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>logintodeepmarketplace</td>
+<td>signUpTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>loginTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
