--- a/deepmarketplace/test-output/old/Default suite/methods-alphabetical.html
+++ b/deepmarketplace/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="918c99">  <td>24/04/14 22:10:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:qa.deepmarketplace.test.LoginPageTest@2a7f1f10]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@635371680</td>   <td></td> </tr>
+<tr bgcolor="e1e270">  <td>24/04/16 17:39:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:qa.deepmarketplace.test.HomePageTest@f09733f]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@253601149</td>   <td></td> </tr>
+<tr bgcolor="e1e270">  <td>24/04/16 17:39:15</td>   <td>12678</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.signUpTest()[pri:0, instance:qa.deepmarketplace.test.HomePageTest@f09733f]">signUpTest</td> 
+  <td>main@253601149</td>   <td></td> </tr>
 </table>
