Store page update

--- a/deepmarketplace/test-output/index.html
+++ b/deepmarketplace/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\kalpesh\AppData\Local\Temp\testng-eclipse-755680336\testng-customsuite.xml</span>
+                    <span>C:\Users\kalpesh\AppData\Local\Temp\testng-eclipse--1175434929\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="qa.deepmarketplace.test.HomePageTest" class="method navigator-link" hash-for-method="signUpTest">signUpTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="qa.deepmarketplace.test.HomePageTest" class="method navigator-link" hash-for-method="selectStoreTest">selectStoreTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,9 +126,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="signUpTest">
-                  </a> <!-- signUpTest -->
-                  <span class="method-name">signUpTest</span>
+                  <a name="selectStoreTest">
+                  </a> <!-- selectStoreTest -->
+                  <span class="method-name">selectStoreTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\kalpesh\AppData\Local\Temp\testng-eclipse-755680336\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\kalpesh\AppData\Local\Temp\testng-eclipse--1175434929\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,7 +147,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;qa.deepmarketplace.test.HomePageTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;signUpTest&quot;/&gt;
+          &lt;include name=&quot;selectStoreTest&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- qa.deepmarketplace.test.HomePageTest --&gt;
     &lt;/classes&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'signUpTest')
+data.setCell(0, 1, 'selectStoreTest')
 data.setCell(0, 2, 'qa.deepmarketplace.test.HomePageTest')
-data.setCell(0, 3, 2890);
+data.setCell(0, 3, 161);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 161 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,7 +213,7 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">2 ignored methods</span>
+            <span class="header-content">3 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
@@ -222,6 +222,8 @@ return data;
                 <span class="ignored-method-name">loginTest</span>
                 <br/>
                 <span class="ignored-method-name">homepageTitleTest</span>
+                <br/>
+                <span class="ignored-method-name">signUpTest</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -239,8 +241,8 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">signUpTest</span>
-                <span class="method-start">12683 ms</span>
+                <span class="method-name">selectStoreTest</span>
+                <span class="method-start">14423 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
