--- a/deepmarketplace/test-output/old/Default suite/methods-not-run.html
+++ b/deepmarketplace/test-output/old/Default suite/methods-not-run.html
@@ -1,4 +1,5 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>qa.deepmarketplace.test.HomePageTest.loginTest</td></tr>
 <tr><td>qa.deepmarketplace.test.HomePageTest.homepageTitleTest</td></tr>
+<tr><td>qa.deepmarketplace.test.HomePageTest.signUpTest</td></tr>
 </table>
