--- a/deepmarketplace/test-output/old/Default suite/classes.html
+++ b/deepmarketplace/test-output/old/Default suite/classes.html
@@ -15,6 +15,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>goToStore</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>signUpTest</td>
 <td>&nbsp;</td></tr>
 <tr>
