--- a/deepmarketplace/test-output/old/Default suite/methods-not-run.html
+++ b/deepmarketplace/test-output/old/Default suite/methods-not-run.html
@@ -2,5 +2,6 @@
 <tr><td>qa.deepmarketplace.test.HomePageTest.signUpTest</td></tr>
 <tr><td>qa.deepmarketplace.test.HomePageTest.homepageTitleTest</td></tr>
 <tr><td>qa.deepmarketplace.test.HomePageTest.goToStore</td></tr>
+<tr><td>qa.deepmarketplace.test.HomePageTest.selectStoreTest</td></tr>
 <tr><td>qa.deepmarketplace.test.HomePageTest.loginTest</td></tr>
 </table>
